[package]
name = "cli"
edition = "2024"

[[bin]]
name = "ofcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
df-sdk = { path = "../df-sdk" }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", default-features = false }
