[package]
name = "df-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
constants = { path = "../constants" }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["macros", "parsing"] }
thiserror = "2.0.17"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
