[package]
name = "df-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
constants = { path = "../constants" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["macros", "parsing"] }
thiserror = "2.0"
tokio-stream = { version = "0.1", default-features = false }
async-stream = "0.3"
